# backups

bash/: monitor.sh  restart.sh  rollback.sh  rotate_logs.sh  rsyncToDev.sh  update.sh
cmake/: CMakeLists.txt
git/: gitignore_cpp  gitignore_python
vim/: README_visual_star.txt  _vimrc
